src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from d:\Documents\OISP\PPL\assignment3\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'integer'", 
                     "'float'", "'boolean'", "'string'", "'array'", "'void'", 
                     "'auto'", "'false'", "'true'", "'for'", "'while'", 
                     "'do'", "'break'", "'continue'", "'if'", "'else'", 
                     "'return'", "'out'", "'function'", "'of'", "'inherit'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "','", 
                     "';'", "':'", "'='", "'::'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'!'", "'&&'", 
                     "'||'", "'=='", "'!='", "'>'", "'>='", "'<'", "'<='" ]

    symbolicNames = [ "<INVALID>", "C_COMMENT", "CPP_COMMENT", "INTLIT", 
                      "FLOATLIT", "BOOLLIT", "STRINGLIT", "INTEGER", "FLOAT", 
                      "BOOLEAN", "STRING", "ARRAY", "VOID", "AUTO", "FALSE", 
                      "TRUE", "FOR", "WHILE", "DO", "BREAK", "CONTINUE", 
                      "IF", "ELSE", "RETURN", "OUT", "FUNCTION", "OF", "INHERIT", 
                      "LRB", "RRB", "LSB", "RSB", "LCB", "RCB", "DOT", "COMMA", 
                      "SM_COLON", "COLONS", "ASSIGN", "STRING_CONCAT", "ADD_OP", 
                      "MIN_OP", "MUL_OP", "DIV_OP", "MOD_OP", "NOT", "AND", 
                      "OR", "EQUAL", "NEQ", "GRT", "GEQ", "LWT", "LEQ", 
                      "ID", "WS", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_many_decl = 1
    RULE_single_decl = 2
    RULE_var_decl = 3
    RULE_sub_var_decl = 4
    RULE_id_list = 5
    RULE_id_li = 6
    RULE_param_decl = 7
    RULE_param_decl_list = 8
    RULE_param_decl_li = 9
    RULE_func_decl = 10
    RULE_statement = 11
    RULE_non_SM_statement = 12
    RULE_sM_statement = 13
    RULE_statement_type = 14
    RULE_assignStatement = 15
    RULE_lhs = 16
    RULE_ifStatement = 17
    RULE_forStatement = 18
    RULE_condition_expr = 19
    RULE_update_expr = 20
    RULE_whileStatement = 21
    RULE_doWhileStatement = 22
    RULE_breakStatement = 23
    RULE_continueStatement = 24
    RULE_returnStatement = 25
    RULE_callStatement = 26
    RULE_blockStatement = 27
    RULE_many_body_line = 28
    RULE_many_body_li = 29
    RULE_body_line = 30
    RULE_var_type = 31
    RULE_return_type = 32
    RULE_atomic_type = 33
    RULE_array_decl_type = 34
    RULE_array_dimension = 35
    RULE_int_li = 36
    RULE_arrLIT = 37
    RULE_expr_list = 38
    RULE_expr_li = 39
    RULE_relational_equal_OPERATOR = 40
    RULE_relational_OPERATOR = 41
    RULE_logical_OPERATOR = 42
    RULE_adding_OPERATOR = 43
    RULE_multiplying_OPERATOR = 44
    RULE_expr = 45
    RULE_sub_expr1 = 46
    RULE_sub_expr2 = 47
    RULE_sub_expr3 = 48
    RULE_sub_expr4 = 49
    RULE_sub_expr5 = 50
    RULE_sub_expr6 = 51
    RULE_sub_expr7 = 52
    RULE_function_call = 53
    RULE_argument_list = 54
    RULE_argument_li = 55
    RULE_operand = 56
    RULE_array_index_expr = 57
    RULE_index_list = 58
    RULE_index_li = 59

    ruleNames =  [ "program", "many_decl", "single_decl", "var_decl", "sub_var_decl", 
                   "id_list", "id_li", "param_decl", "param_decl_list", 
                   "param_decl_li", "func_decl", "statement", "non_SM_statement", 
                   "sM_statement", "statement_type", "assignStatement", 
                   "lhs", "ifStatement", "forStatement", "condition_expr", 
                   "update_expr", "whileStatement", "doWhileStatement", 
                   "breakStatement", "continueStatement", "returnStatement", 
                   "callStatement", "blockStatement", "many_body_line", 
                   "many_body_li", "body_line", "var_type", "return_type", 
                   "atomic_type", "array_decl_type", "array_dimension", 
                   "int_li", "arrLIT", "expr_list", "expr_li", "relational_equal_OPERATOR", 
                   "relational_OPERATOR", "logical_OPERATOR", "adding_OPERATOR", 
                   "multiplying_OPERATOR", "expr", "sub_expr1", "sub_expr2", 
                   "sub_expr3", "sub_expr4", "sub_expr5", "sub_expr6", "sub_expr7", 
                   "function_call", "argument_list", "argument_li", "operand", 
                   "array_index_expr", "index_list", "index_li" ]

    EOF = Token.EOF
    C_COMMENT=1
    CPP_COMMENT=2
    INTLIT=3
    FLOATLIT=4
    BOOLLIT=5
    STRINGLIT=6
    INTEGER=7
    FLOAT=8
    BOOLEAN=9
    STRING=10
    ARRAY=11
    VOID=12
    AUTO=13
    FALSE=14
    TRUE=15
    FOR=16
    WHILE=17
    DO=18
    BREAK=19
    CONTINUE=20
    IF=21
    ELSE=22
    RETURN=23
    OUT=24
    FUNCTION=25
    OF=26
    INHERIT=27
    LRB=28
    RRB=29
    LSB=30
    RSB=31
    LCB=32
    RCB=33
    DOT=34
    COMMA=35
    SM_COLON=36
    COLONS=37
    ASSIGN=38
    STRING_CONCAT=39
    ADD_OP=40
    MIN_OP=41
    MUL_OP=42
    DIV_OP=43
    MOD_OP=44
    NOT=45
    AND=46
    OR=47
    EQUAL=48
    NEQ=49
    GRT=50
    GEQ=51
    LWT=52
    LEQ=53
    ID=54
    WS=55
    ILLEGAL_ESCAPE=56
    UNCLOSE_STRING=57
    ERROR_CHAR=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def many_decl(self):
            return self.getTypedRuleContext(MT22Parser.Many_declContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.many_decl()
            self.state = 121
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def single_decl(self):
            return self.getTypedRuleContext(MT22Parser.Single_declContext,0)


        def many_decl(self):
            return self.getTypedRuleContext(MT22Parser.Many_declContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_many_decl




    def many_decl(self):

        localctx = MT22Parser.Many_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_many_decl)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.single_decl()
                self.state = 124
                self.many_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.single_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Single_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MT22Parser.Var_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(MT22Parser.Func_declContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_single_decl




    def single_decl(self):

        localctx = MT22Parser.Single_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_single_decl)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.func_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def sub_var_decl(self):
            return self.getTypedRuleContext(MT22Parser.Sub_var_declContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def SM_COLON(self):
            return self.getToken(MT22Parser.SM_COLON, 0)

        def id_list(self):
            return self.getTypedRuleContext(MT22Parser.Id_listContext,0)


        def COLONS(self):
            return self.getToken(MT22Parser.COLONS, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_decl




    def var_decl(self):

        localctx = MT22Parser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(MT22Parser.ID)
                self.state = 134
                self.sub_var_decl()
                self.state = 135
                self.expr()
                self.state = 136
                self.match(MT22Parser.SM_COLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.id_list()
                self.state = 139
                self.match(MT22Parser.COLONS)
                self.state = 140
                self.var_type()
                self.state = 141
                self.match(MT22Parser.SM_COLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sub_var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def sub_var_decl(self):
            return self.getTypedRuleContext(MT22Parser.Sub_var_declContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLONS(self):
            return self.getToken(MT22Parser.COLONS, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_sub_var_decl




    def sub_var_decl(self):

        localctx = MT22Parser.Sub_var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sub_var_decl)
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.match(MT22Parser.COMMA)
                self.state = 146
                self.match(MT22Parser.ID)
                self.state = 147
                self.sub_var_decl()
                self.state = 148
                self.expr()
                self.state = 149
                self.match(MT22Parser.COMMA)
                pass
            elif token in [MT22Parser.COLONS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(MT22Parser.COLONS)
                self.state = 152
                self.var_type()
                self.state = 153
                self.match(MT22Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def id_li(self):
            return self.getTypedRuleContext(MT22Parser.Id_liContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_id_list




    def id_list(self):

        localctx = MT22Parser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_id_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(MT22Parser.ID)
            self.state = 158
            self.id_li()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_liContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def id_li(self):
            return self.getTypedRuleContext(MT22Parser.Id_liContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_id_li




    def id_li(self):

        localctx = MT22Parser.Id_liContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_id_li)
        try:
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.match(MT22Parser.COMMA)
                self.state = 161
                self.match(MT22Parser.ID)
                self.state = 162
                self.id_li()
                pass
            elif token in [MT22Parser.COLONS]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLONS(self):
            return self.getToken(MT22Parser.COLONS, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param_decl




    def param_decl(self):

        localctx = MT22Parser.Param_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_param_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 166
                self.match(MT22Parser.INHERIT)


            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 169
                self.match(MT22Parser.OUT)


            self.state = 172
            self.match(MT22Parser.ID)
            self.state = 173
            self.match(MT22Parser.COLONS)
            self.state = 174
            self.var_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_decl(self):
            return self.getTypedRuleContext(MT22Parser.Param_declContext,0)


        def param_decl_li(self):
            return self.getTypedRuleContext(MT22Parser.Param_decl_liContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_param_decl_list




    def param_decl_list(self):

        localctx = MT22Parser.Param_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param_decl_list)
        try:
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.INHERIT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.param_decl()
                self.state = 177
                self.param_decl_li()
                pass
            elif token in [MT22Parser.RRB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_decl_liContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def param_decl(self):
            return self.getTypedRuleContext(MT22Parser.Param_declContext,0)


        def param_decl_li(self):
            return self.getTypedRuleContext(MT22Parser.Param_decl_liContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_param_decl_li




    def param_decl_li(self):

        localctx = MT22Parser.Param_decl_liContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param_decl_li)
        try:
            self.state = 187
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                self.match(MT22Parser.COMMA)
                self.state = 183
                self.param_decl()
                self.state = 184
                self.param_decl_li()
                pass
            elif token in [MT22Parser.RRB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLONS(self):
            return self.getToken(MT22Parser.COLONS, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def return_type(self):
            return self.getTypedRuleContext(MT22Parser.Return_typeContext,0)


        def LRB(self):
            return self.getToken(MT22Parser.LRB, 0)

        def param_decl_list(self):
            return self.getTypedRuleContext(MT22Parser.Param_decl_listContext,0)


        def RRB(self):
            return self.getToken(MT22Parser.RRB, 0)

        def blockStatement(self):
            return self.getTypedRuleContext(MT22Parser.BlockStatementContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_func_decl




    def func_decl(self):

        localctx = MT22Parser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(MT22Parser.ID)
            self.state = 190
            self.match(MT22Parser.COLONS)
            self.state = 191
            self.match(MT22Parser.FUNCTION)
            self.state = 192
            self.return_type()
            self.state = 193
            self.match(MT22Parser.LRB)
            self.state = 194
            self.param_decl_list()
            self.state = 195
            self.match(MT22Parser.RRB)
            self.state = 198
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 196
                self.match(MT22Parser.INHERIT)
                self.state = 197
                self.match(MT22Parser.ID)


            self.state = 200
            self.blockStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def non_SM_statement(self):
            return self.getTypedRuleContext(MT22Parser.Non_SM_statementContext,0)


        def sM_statement(self):
            return self.getTypedRuleContext(MT22Parser.SM_statementContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_statement




    def statement(self):

        localctx = MT22Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.state = 204
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.FOR, MT22Parser.WHILE, MT22Parser.IF, MT22Parser.LCB]:
                self.enterOuterAlt(localctx, 1)
                self.state = 202
                self.non_SM_statement()
                pass
            elif token in [MT22Parser.DO, MT22Parser.BREAK, MT22Parser.CONTINUE, MT22Parser.RETURN, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 203
                self.sM_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_SM_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStatement(self):
            return self.getTypedRuleContext(MT22Parser.IfStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(MT22Parser.ForStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(MT22Parser.WhileStatementContext,0)


        def blockStatement(self):
            return self.getTypedRuleContext(MT22Parser.BlockStatementContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_non_SM_statement




    def non_SM_statement(self):

        localctx = MT22Parser.Non_SM_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_non_SM_statement)
        try:
            self.state = 210
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 206
                self.ifStatement()
                pass
            elif token in [MT22Parser.FOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 207
                self.forStatement()
                pass
            elif token in [MT22Parser.WHILE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 208
                self.whileStatement()
                pass
            elif token in [MT22Parser.LCB]:
                self.enterOuterAlt(localctx, 4)
                self.state = 209
                self.blockStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SM_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement_type(self):
            return self.getTypedRuleContext(MT22Parser.Statement_typeContext,0)


        def SM_COLON(self):
            return self.getToken(MT22Parser.SM_COLON, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_sM_statement




    def sM_statement(self):
